# homeassistant-siegenia

./: .gitignore  CODEOWNERS  README.md  hacs.json  pyproject.toml  pytest.ini  requirements_test.txt  requirements_test_latest.txt
.github/workflows/: ci.yml  hassfest.yml  validate-hacs.yml
blueprints/automation/evotecit/: siegenia_sync_clock_nightly.yaml
blueprints/script/evotecit/: siegenia_mode_button.yaml
custom_components/siegenia/: __init__.py  __init_services__.py  _brand_assets.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  cover.py  device_condition.py  device_registry.py  device_trigger.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  update.py
custom_components/siegenia/siegenia_client/: __init__.py  client.py
custom_components/siegenia/translations/: de.json  en.json  fr.json  pl.json
docs/: RELEASING.md  SUPPORT.md  python-library.md
docs/brands-pr/: PR-TEMPLATE.md  README.md
examples/: python_client.py
examples/lovelace/: mushroom-compact.yaml  mushroom-detailed.yaml  tile-basic.yaml
siegenia_client/: __init__.py  _loader.py  client.py
tests/: conftest.py  test_config_flow.py  test_cover_and_services.py  test_diagnostics.py  test_online_update_syncclock.py  test_push_poll_events.py  test_python_package.py  test_regressions.py  test_security_and_registry.py  test_select_mode.py  test_switch.py  test_timer_and_device_automation.py
tools/: gen_brand_icons.py
